--- a/app/src/main/res/layout/content_second.xml
+++ b/app/src/main/res/layout/content_second.xml
@@ -512,6 +512,7 @@
         android:id="@+id/imageButton2"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:onClick="share"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toEndOf="@+id/Pothos"
         app:layout_constraintTop_toTopOf="@+id/Pothos"
@@ -521,6 +522,7 @@
         android:id="@+id/imageButton3"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:onClick="share"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toEndOf="@+id/dracaena"
         app:layout_constraintTop_toTopOf="@+id/dracaena"
@@ -532,6 +534,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
+        android:onClick="share"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintStart_toEndOf="@+id/philodendronGreen"
         app:layout_constraintTop_toTopOf="@+id/philodendronGreen"
